--- a/index.html
+++ b/index.html
@@ -5,72 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multichain Swap</title>
     <style>
-      /* Background seluruh halaman: hijau tua */
       body {
         margin: 0;
         padding: 0;
-        background-color: #1b5e20; /* dark green */
+        background-color: #1b5e20; /* Dark green */
         font-family: sans-serif;
         color: #fff;
       }
-      /* Bingkai putih dengan border emas */
       #app-container {
-        box-sizing: border-box;
-        background-color: #ffffff;
-        border: 5px solid gold;
-        min-height: 100vh;
         display: flex;
+        min-height: 100vh;
+        background: #ffffff;
+        border: 5px solid gold;
       }
-      /* Sidebar utama */
+      /* Sidebar */
       #sidebar {
-        width: 240px;
+        width: 260px;
         background-color: #2e7d32;
         padding: 1rem;
         display: flex;
         flex-direction: column;
       }
       #sidebar h2 {
-        margin: 0 0 1rem;
-        font-size: 1.4rem;
+        margin: 0 0 0.5rem;
         color: #fff;
       }
-      #sidebar .panel {
+      /* Panel box shared style */
+      .panel-box {
+        background: #388e3c;
+        border: 2px solid #66bb6a;
+        border-radius: 6px;
+        padding: 0.8rem;
         margin-bottom: 1rem;
       }
-      #sidebar .panel a {
+      .panel-box button, .panel-box a {
         display: block;
-        background: #388e3c;
+        width: 100%;
+        background: #4caf50;
         color: #fff;
-        text-decoration: none;
-        padding: 0.6rem;
+        border: none;
         border-radius: 4px;
-        margin: 0.3rem 0;
+        padding: 0.6rem;
+        margin: 0.4rem 0;
+        text-align: center;
+        cursor: pointer;
         transition: background 0.2s;
+        text-decoration: none;
       }
-      #sidebar .panel a:hover {
+      .panel-box button:hover, .panel-box a:hover {
         background: #66bb6a;
       }
-      /* Social media section */
-      #social {
-        margin-top: auto;
+      /* Connect Wallet box */
+      #connect-box {
+        background: #004d40;
+        border: 2px solid #26a69a;
+        padding: 1rem;
+        border-radius: 6px;
+        text-align: center;
+        margin-bottom: 1rem;
       }
-      #social a {
-        display: flex;
-        align-items: center;
-        margin: 0.3rem 0;
-        text-decoration: none;
-        color: #fff;
-        transition: color 0.2s;
+      #connect-box button {
+        background: #26a69a;
+        margin-top: 0.6rem;
       }
-      #social a img {
-        width: 20px;
-        height: 20px;
-        margin-right: 0.5rem;
-      }
-      #social a:hover {
-        color: #cddc39; /* light lime */
-      }
-      /* Area konten utama */
+      /* Main content */
       #main {
         flex: 1;
         padding: 1rem;
@@ -80,33 +78,47 @@
   <body>
     <div id="app-container">
       <nav id="sidebar">
-        <h2>Menu</h2>
-
-        <div class="panel">
-          <a href="https://explore.pilex.web.id/" target="_blank">
-            🔍 Explore
-          </a>
-          <a href="https://www.pilex.web.id" target="_blank">
-            🏠 Website Resmi
-          </a>
+        <h2>Wallet</h2>
+        <div id="connect-box">
+          <div>Not Connected</div>
+          <button id="btn-connect">Connect Wallet</button>
         </div>
 
-        <div class="panel">
+        <h2>Chain</h2>
+        <div class="panel-box" id="chain-box">
+          <button data-chain="helios">Helios Testnet</button>
+          <button data-chain="lumera">Lumera Testnet</button>
+          <button data-chain="empe">EMPE Testnet</button>
+          <button data-chain="xos">XOS Testnet</button>
+        </div>
+
+        <h2>Swap Pair</h2>
+        <div class="panel-box" id="pair-box">
+          <button data-pair="helios/usdt">Helios / USDT</button>
+          <button data-pair="helios/usdc">Helios / USDC</button>
+          <button data-pair="helios/pilex">Helios / PILEX</button>
+        </div>
+
+        <div style="margin-top:auto">
+          <h2>Explore & Website</h2>
+          <div class="panel-box">
+            <a href="https://explore.pilex.web.id/" target="_blank">🔍 Explore</a>
+            <a href="https://www.pilex.web.id" target="_blank">🏠 Website Resmi</a>
+          </div>
           <h2>Sosial Media</h2>
-          <div id="social">
+          <div class="panel-box">
             <a href="https://twitter.com/ardihandoyo" target="_blank">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v8/icons/twitter.svg" alt="X" /> X: @ardihandoyo
+              X: @ardihandoyo
             </a>
             <a href="https://github.com/Pilex3173" target="_blank">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v8/icons/github.svg" alt="GitHub" /> GitHub: @Pilex3173
+              GitHub: @Pilex3173
             </a>
             <a href="https://discord.gg/rahmatardihando" target="_blank">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v8/icons/discord.svg" alt="Discord" /> Discord: rahmatardihando
+              Discord: rahmatardihando
             </a>
           </div>
         </div>
       </nav>
-
       <main id="main">
         <div id="app"></div>
       </main>
@@ -114,17 +126,32 @@
 
     <script type="module" src="/src/main.ts"></script>
     <script>
-      // Event dispatch untuk chain-select (tetap ada jika digunakan Vue)
-      document
-        .querySelectorAll('#sidebar button[data-chain]')
-        .forEach(btn => {
-          btn.addEventListener('click', () => {
-            const chain = btn.getAttribute('data-chain')
-            window.dispatchEvent(
-              new CustomEvent('chain-select', { detail: chain })
-            )
-          })
-        })
+      // Wallet connect handler
+      document.getElementById('btn-connect').addEventListener('click', async () => {
+        if (!window.keplr) return alert('Keplr not found');
+        await window.keplr.enable('helios-42000');
+        const signer = window.getOfflineSigner('helios-42000');
+        const accounts = await signer.getAccounts();
+        document.querySelector('#connect-box div').textContent = accounts[0].address;
+      });
+
+      // Chain select dispatch
+      document.querySelectorAll('#chain-box button').forEach(btn => {
+        btn.addEventListener('click', () => {
+          window.dispatchEvent(new CustomEvent('chain-select', {
+            detail: btn.dataset.chain
+          }));
+        });
+      });
+
+      // Pair select dispatch
+      document.querySelectorAll('#pair-box button').forEach(btn => {
+        btn.addEventListener('click', () => {
+          window.dispatchEvent(new CustomEvent('pair-select', {
+            detail: btn.dataset.pair
+          }));
+        });
+      });
     </script>
   </body>
 </html>
