--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
       body {
         margin: 0;
         padding: 0;
-        background-color: #1b5e20; /* Dark green */
         font-family: sans-serif;
+        background: linear-gradient(135deg, #0d1b1e, #1b5e20);
         color: #fff;
+        background-image: url('https://www.transparenttextures.com/patterns/black-linen.png');
       }
       #app-container {
         display: flex;
@@ -18,10 +19,9 @@
         background: #ffffff;
         border: 5px solid gold;
       }
-      /* Sidebar */
       #sidebar {
         width: 260px;
-        background-color: #2e7d32;
+        background-color: #1b3c1b;
         padding: 1rem;
         display: flex;
         flex-direction: column;
@@ -29,19 +29,22 @@
       #sidebar h2 {
         margin: 0 0 0.5rem;
         color: #fff;
+        font-size: 1.2rem;
+        border-bottom: 1px solid #4caf50;
+        padding-bottom: 0.3rem;
       }
-      /* Panel box shared style */
       .panel-box {
-        background: #388e3c;
+        background: #234522;
         border: 2px solid #66bb6a;
         border-radius: 6px;
         padding: 0.8rem;
         margin-bottom: 1rem;
       }
-      .panel-box button, .panel-box a {
+      .panel-box button,
+      .panel-box a {
         display: block;
         width: 100%;
-        background: #4caf50;
+        background: #388e3c;
         color: #fff;
         border: none;
         border-radius: 4px;
@@ -52,10 +55,10 @@
         transition: background 0.2s;
         text-decoration: none;
       }
-      .panel-box button:hover, .panel-box a:hover {
+      .panel-box button:hover,
+      .panel-box a:hover {
         background: #66bb6a;
       }
-      /* Connect Wallet box */
       #connect-box {
         background: #004d40;
         border: 2px solid #26a69a;
@@ -67,11 +70,20 @@
       #connect-box button {
         background: #26a69a;
         margin-top: 0.6rem;
+        color: #fff;
+        border: none;
+        padding: 0.5rem 1rem;
+        border-radius: 4px;
+        cursor: pointer;
       }
-      /* Main content */
       #main {
         flex: 1;
-        padding: 1rem;
+        padding: 1.5rem;
+        background: rgba(0, 0, 0, 0.8);
+        background-image: url('https://www.transparenttextures.com/patterns/stardust.png');
+      }
+      #main h1 {
+        color: #fff;
       }
     </style>
   </head>
@@ -105,28 +117,24 @@
             <a href="https://explore.pilex.web.id/" target="_blank">🔍 Explore</a>
             <a href="https://www.pilex.web.id" target="_blank">🏠 Website Resmi</a>
           </div>
+
           <h2>Sosial Media</h2>
           <div class="panel-box">
-            <a href="https://twitter.com/ardihandoyo" target="_blank">
-              X: @ardihandoyo
-            </a>
-            <a href="https://github.com/Pilex3173" target="_blank">
-              GitHub: @Pilex3173
-            </a>
-            <a href="https://discord.gg/rahmatardihando" target="_blank">
-              Discord: rahmatardihando
-            </a>
+            <a href="https://twitter.com/ardihandoyo" target="_blank">X: @ardihandoyo</a>
+            <a href="https://github.com/Pilex3173" target="_blank">GitHub: @Pilex3173</a>
+            <a href="https://discord.gg/rahmatardihando" target="_blank">Discord: rahmatardihando</a>
           </div>
         </div>
       </nav>
+
       <main id="main">
+        <h1>Multichain Swap Interface</h1>
         <div id="app"></div>
       </main>
     </div>
 
     <script type="module" src="/src/main.ts"></script>
     <script>
-      // Wallet connect handler
       document.getElementById('btn-connect').addEventListener('click', async () => {
         if (!window.keplr) return alert('Keplr not found');
         await window.keplr.enable('helios-42000');
@@ -135,7 +143,6 @@
         document.querySelector('#connect-box div').textContent = accounts[0].address;
       });
 
-      // Chain select dispatch
       document.querySelectorAll('#chain-box button').forEach(btn => {
         btn.addEventListener('click', () => {
           window.dispatchEvent(new CustomEvent('chain-select', {
@@ -144,7 +151,6 @@
         });
       });
 
-      // Pair select dispatch
       document.querySelectorAll('#pair-box button').forEach(btn => {
         btn.addEventListener('click', () => {
           window.dispatchEvent(new CustomEvent('pair-select', {
