--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         min-height: 100vh;
         background: #ffffff;
         border: 5px solid gold;
+        transition: all 0.3s;
       }
       #sidebar {
         width: 260px;
@@ -25,6 +26,24 @@
         padding: 1rem;
         display: flex;
         flex-direction: column;
+        transition: all 0.3s;
+      }
+      #sidebar.hidden {
+        width: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+      #toggle-sidebar {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        background: #388e3c;
+        color: white;
+        border: none;
+        padding: 0.5rem;
+        cursor: pointer;
+        z-index: 999;
+        border-radius: 4px;
       }
       #sidebar h2 {
         margin: 0 0 0.5rem;
@@ -81,13 +100,48 @@
         padding: 1.5rem;
         background: rgba(0, 0, 0, 0.8);
         background-image: url('https://www.transparenttextures.com/patterns/stardust.png');
+        color: white;
+        position: relative;
       }
       #main h1 {
         color: #fff;
       }
+      #swap-interface {
+        background: rgba(255, 255, 255, 0.05);
+        border: 2px solid #4caf50;
+        border-radius: 10px;
+        padding: 2rem;
+        max-width: 400px;
+        margin-top: 2rem;
+      }
+      #swap-interface input {
+        width: 100%;
+        padding: 0.6rem;
+        margin-bottom: 1rem;
+        border-radius: 6px;
+        border: none;
+        background: #2e7d32;
+        color: #fff;
+        font-size: 1rem;
+      }
+      #swap-interface button {
+        width: 100%;
+        padding: 0.8rem;
+        background: #43a047;
+        color: white;
+        border: none;
+        border-radius: 6px;
+        font-size: 1.1rem;
+        cursor: pointer;
+        transition: background 0.2s;
+      }
+      #swap-interface button:hover {
+        background: #66bb6a;
+      }
     </style>
   </head>
   <body>
+    <button id="toggle-sidebar">☰</button>
     <div id="app-container">
       <nav id="sidebar">
         <h2>Wallet</h2>
@@ -129,7 +183,15 @@
 
       <main id="main">
         <h1>Multichain Swap Interface</h1>
-        <div id="app"></div>
+        <div id="swap-interface">
+          <label for="from-token">From Token:</label>
+          <input type="text" id="from-token" placeholder="e.g., Helios">
+
+          <label for="to-token">To Token:</label>
+          <input type="text" id="to-token" placeholder="e.g., USDT">
+
+          <button id="btn-swap">Swap</button>
+        </div>
       </main>
     </div>
 
@@ -157,6 +219,17 @@
             detail: btn.dataset.pair
           }));
         });
+      });
+
+      document.getElementById('toggle-sidebar').addEventListener('click', () => {
+        document.getElementById('sidebar').classList.toggle('hidden');
+      });
+
+      document.getElementById('btn-swap').addEventListener('click', () => {
+        const from = document.getElementById('from-token').value;
+        const to = document.getElementById('to-token').value;
+        alert(`Swapping from ${from} to ${to}...`);
+        // Implement your actual swap logic here
       });
     </script>
   </body>
