--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <h2>Explore & Website</h2>
           <div class="panel-box">
             <a href="https://explore.pilex.web.id/" target="_blank">🔍 Explore</a>
-            <a href="https://www.pilex.web.id" target="_blank">🏠 Website Resmi</a>
+            <a href="https://www.pilex.web.id" target="_blank">🏠 Our Website</a>
           </div>
 
           <h2>Sosial Media</h2>
