--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-# Save the updated HTML content with the image replacing the "PILEX SWAP" text
-html_content = """
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -158,7 +157,7 @@ html_content = """
       <nav id="sidebar">
         <h2>Wallet</h2>
         <div id="connect-box">
-          <img src="1000155741.jpg" alt="Logo" />
+          <img src=".1000155552.jpg" alt="Logo" />
           <button id="btn-connect">Connect Wallet</button>
           <div id="wallet-status">Not Connected</div>
         </div>
